add user statistics
